--- a/Source/ZECore/CMakeLists.txt
+++ b/Source/ZECore/CMakeLists.txt
@@ -35,72 +35,72 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEApplicationModule.cpp			Sources)
-add_source (ZEApplicationModule.h			Sources ZESDK)
-add_source (ZEApplicationModuleDescription.cpp		Sources)
-add_source (ZEApplicationModuleDescription.h		Sources ZESDK)
-add_source (ZEBase.cpp						Sources)
-add_source (ZEBase.h						Sources ZESDK)
-add_source (ZECommand.cpp					Sources)
-add_source (ZECommand.h						Sources ZESDK)
-add_source (ZECommandManager.cpp			Sources)
-add_source (ZECommandManager.h				Sources ZESDK)
-add_source (ZECommandSection.cpp			Sources)
-add_source (ZECommandSection.h				Sources ZESDK)
-add_source (ZEConsole.cpp					Sources)
-add_source (ZEConsole.h						Sources ZESDK)
-add_source (ZEConsoleWindow.cpp				Sources)
-add_source (ZEConsoleWindow.h				Sources ZESDK)
-add_source (ZECore.cpp						Sources)
-add_source (ZECore.h						Sources ZESDK)
-add_source (ZEError.cpp						Sources)
-add_source (ZEError.h						Sources ZESDK)
-add_source (ZEExtension.cpp					Sources)
-add_source (ZEExtension.h					Sources ZESDK)
-add_source (ZEExtensionDescription.cpp		Sources)
-add_source (ZEExtensionDescription.h		Sources ZESDK)
-add_source (ZEExtensionManager.cpp			Sources)
-add_source (ZEExtensionManager.h			Sources ZESDK)
-add_source (ZEModule.cpp					Sources)
-add_source (ZEModule.h						Sources ZESDK)
-add_source (ZEModuleDescription.cpp			Sources)
-add_source (ZEModuleDescription.h			Sources ZESDK)
-add_source (ZEModuleManager.cpp				Sources)
-add_source (ZEModuleManager.h				Sources ZESDK)
-add_source (ZEOption.cpp					Sources)
-add_source (ZEOption.h						Sources ZESDK)
-add_source (ZEOptionManager.cpp				Sources)
-add_source (ZEOptionManager.h				Sources ZESDK)
-add_source (ZEOptionSection.cpp				Sources)
-add_source (ZEOptionSection.h				Sources ZESDK)
-add_source (ZEPlugin.cpp					Sources)
-add_source (ZEPlugin.h						Sources ZESDK)
-add_source (ZEPluginManager.cpp				Sources)
-add_source (ZEPluginManager.h				Sources ZESDK)
-add_source (ZEProfiler.cpp					Sources)
-add_source (ZEProfiler.h					Sources ZESDK)
-add_source (ZEProfilerManager.cpp			Sources)
-add_source (ZEProfilerManager.h				Sources ZESDK)
-add_source (ZERealTimeClock.cpp				Sources)
-add_source (ZERealTimeClock.h				Sources ZESDK)
-add_source (ZEResource.cpp					Sources)
-add_source (ZEResource.h					Sources ZESDK)
-add_source (ZEResourceManager.cpp			Sources)
-add_source (ZEResourceManager.h				Sources ZESDK)
-add_source (ZESystemMessageManager.cpp		Sources)
-add_source (ZESystemMessageManager.h		Sources ZESDK)
-add_source (ZESystemMessageHandler.cpp		Sources)
-add_source (ZESystemMessageHandler.h		Sources ZESDK)
-add_source (ZEWindow.cpp					Sources)
-add_source (ZEWindow.h						Sources ZESDK)
-add_source (ZEWindowResources.h				Sources)
-add_source (ZEWindowResources.rc			Sources)
-add_source (ZEVersion.cpp					Sources)
-add_source (ZEVersion.h						Sources ZESDK)
+ze_add_source(ZEApplicationModule.cpp				Sources)
+ze_add_source(ZEApplicationModule.h					Sources Headers)
+ze_add_source(ZEApplicationModuleDescription.cpp	Sources)
+ze_add_source(ZEApplicationModuleDescription.h		Sources Headers)
+ze_add_source(ZEBase.cpp							Sources)
+ze_add_source(ZEBase.h								Sources Headers)
+ze_add_source(ZECommand.cpp							Sources)
+ze_add_source(ZECommand.h							Sources Headers)
+ze_add_source(ZECommandManager.cpp					Sources)
+ze_add_source(ZECommandManager.h					Sources Headers)
+ze_add_source(ZECommandSection.cpp					Sources)
+ze_add_source(ZECommandSection.h					Sources Headers)
+ze_add_source(ZEConsole.cpp							Sources)
+ze_add_source(ZEConsole.h							Sources Headers)
+ze_add_source(ZEConsoleWindow.cpp					Sources)
+ze_add_source(ZEConsoleWindow.h						Sources Headers)
+ze_add_source(ZECore.cpp							Sources)
+ze_add_source(ZECore.h								Sources Headers)
+ze_add_source(ZEError.cpp							Sources)
+ze_add_source(ZEError.h								Sources Headers)
+ze_add_source(ZEExtension.cpp						Sources)
+ze_add_source(ZEExtension.h							Sources Headers)
+ze_add_source(ZEExtensionDescription.cpp			Sources)
+ze_add_source(ZEExtensionDescription.h				Sources Headers)
+ze_add_source(ZEExtensionManager.cpp				Sources)
+ze_add_source(ZEExtensionManager.h					Sources Headers)
+ze_add_source(ZEModule.cpp							Sources)
+ze_add_source(ZEModule.h							Sources Headers)
+ze_add_source(ZEModuleDescription.cpp				Sources)
+ze_add_source(ZEModuleDescription.h					Sources Headers)
+ze_add_source(ZEModuleManager.cpp					Sources)
+ze_add_source(ZEModuleManager.h						Sources Headers)
+ze_add_source(ZEOption.cpp							Sources)
+ze_add_source(ZEOption.h							Sources Headers)
+ze_add_source(ZEOptionManager.cpp					Sources)
+ze_add_source(ZEOptionManager.h						Sources Headers)
+ze_add_source(ZEOptionSection.cpp					Sources)
+ze_add_source(ZEOptionSection.h						Sources Headers)
+ze_add_source(ZEPlugin.cpp							Sources)
+ze_add_source(ZEPlugin.h							Sources Headers)
+ze_add_source(ZEPluginManager.cpp					Sources)
+ze_add_source(ZEPluginManager.h						Sources Headers)
+ze_add_source(ZEProfiler.cpp						Sources)
+ze_add_source(ZEProfiler.h							Sources Headers)
+ze_add_source(ZEProfilerManager.cpp					Sources)
+ze_add_source(ZEProfilerManager.h					Sources Headers)
+ze_add_source(ZERealTimeClock.cpp					Sources)
+ze_add_source(ZERealTimeClock.h						Sources Headers)
+ze_add_source(ZEResource.cpp						Sources)
+ze_add_source(ZEResource.h							Sources Headers)
+ze_add_source(ZEResourceManager.cpp					Sources)
+ze_add_source(ZEResourceManager.h					Sources Headers)
+ze_add_source(ZESystemMessageManager.cpp			Sources)
+ze_add_source(ZESystemMessageManager.h				Sources Headers)
+ze_add_source(ZESystemMessageHandler.cpp			Sources)
+ze_add_source(ZESystemMessageHandler.h				Sources Headers)
+ze_add_source(ZEWindow.cpp							Sources)
+ze_add_source(ZEWindow.h							Sources Headers)
+ze_add_source(ZEWindowResources.h					Sources)
+ze_add_source(ZEWindowResources.rc					Sources)
+ze_add_source(ZEVersion.cpp							Sources)
+ze_add_source(ZEVersion.h							Sources Headers)
 
-add_library (ZECore ${Sources})
-
-set_property (TARGET ZECore PROPERTY FOLDER "Zinek Engine")
-
-install (TARGETS ZECore COMPONENT "Libraries" CONFIGURATIONS Release ARCHIVE DESTINATION Lib)
-install (FILES ${ZESDK} COMPONENT "Includes" DESTINATION Include/ZECore)
+ze_add_library(ZECore 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	INSTALL
+	INSTALL_DESTINATION "ZECore"
+	INSTALL_COMPONENT ZESDK)
