--- a/Source/ZEGame/CMakeLists.txt
+++ b/Source/ZEGame/CMakeLists.txt
@@ -35,50 +35,51 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZECanvasBrush.cpp		Sources)
-add_source (ZECanvasBrush.h			Sources ZESDK ZEPP)
-add_source (ZECharacter.cpp			Sources)
-add_source (ZECharacter.h			Sources ZESDK ZEPP)
-add_source (ZEComponent.cpp			Sources)
-add_source (ZEComponent.h			Sources ZESDK ZEPP)
-add_source (ZECompoundEntity.cpp	Sources)
-add_source (ZECompoundEntity.h		Sources ZESDK ZEPP)
-add_source (ZEDrawParameters.cpp	Sources)
-add_source (ZEDrawParameters.h		Sources ZESDK)
-add_source (ZEEntity.cpp			Sources)
-add_source (ZEEntity.h				Sources ZESDK ZEPP)
-add_source (ZEEntityProvider.cpp	Sources)
-add_source (ZEEntityProvider.h		Sources ZESDK)
-add_source (ZEGame.cpp				Sources)
-add_source (ZEGame.h				Sources ZESDK)
-add_source (ZEGameProvider.cpp		Sources)
-add_source (ZEGameProvider.h		Sources ZESDK)
-add_source (ZEGrid.cpp				Sources)
-add_source (ZEGrid.h				Sources	ZESDK ZEPP)
-add_source (ZEGizmo.cpp	    		Sources)
-add_source (ZEGizmo.h				Sources	ZESDK ZEPP)
-add_source (ZEPlayer.cpp			Sources)
-add_source (ZEPlayer.h				Sources ZESDK ZEPP)
-add_source (ZEPortal.cpp			Sources)
-add_source (ZEPortal.h				Sources ZESDK)
-add_source (ZEPresentationSlide.cpp	Sources)
-add_source (ZEPresentationSlide.h	Sources ZESDK ZEPP)
-add_source (ZERayCaster.cpp			Sources)
-add_source (ZERayCaster.h			Sources ZESDK)
-add_source (ZEScene.cpp				Sources)
-add_source (ZEScene.h				Sources ZESDK)
-add_source (ZESceneDebugDraw.cpp	Sources)
-add_source (ZESceneDebugDraw.h		Sources ZESDK)
-add_source (ZESceneCuller.cpp		Sources)
-add_source (ZESceneCuller.h			Sources ZESDK)
-add_source (ZESkyBrush.cpp			Sources)
-add_source (ZESkyBrush.h			Sources ZESDK ZEPP)
-add_source (ZETrigger.cpp			Sources)
-add_source (ZETrigger.h				Sources ZESDK ZEPP)
+ze_add_source(ZECanvasBrush.cpp			Sources)
+ze_add_source(ZECanvasBrush.h			Sources Header ZEPP)
+ze_add_source(ZECharacter.cpp			Sources)
+ze_add_source(ZECharacter.h				Sources Header ZEPP)
+ze_add_source(ZEComponent.cpp			Sources)
+ze_add_source(ZEComponent.h				Sources Header ZEPP)
+ze_add_source(ZECompoundEntity.cpp		Sources)
+ze_add_source(ZECompoundEntity.h		Sources Header ZEPP)
+ze_add_source(ZEDrawParameters.cpp		Sources)
+ze_add_source(ZEDrawParameters.h		Sources Headers)
+ze_add_source(ZEEntity.cpp				Sources)
+ze_add_source(ZEEntity.h				Sources Header ZEPP)
+ze_add_source(ZEEntityProvider.cpp		Sources)
+ze_add_source(ZEEntityProvider.h		Sources Headers)
+ze_add_source(ZEGame.cpp				Sources)
+ze_add_source(ZEGame.h					Sources Headers)
+ze_add_source(ZEGameProvider.cpp		Sources)
+ze_add_source(ZEGameProvider.h			Sources Headers)
+ze_add_source(ZEGrid.cpp				Sources)
+ze_add_source(ZEGrid.h					Sources	Header ZEPP)
+ze_add_source(ZEGizmo.cpp	    		Sources)
+ze_add_source(ZEGizmo.h					Sources	Header ZEPP)
+ze_add_source(ZEPlayer.cpp				Sources)
+ze_add_source(ZEPlayer.h				Sources Header ZEPP)
+ze_add_source(ZEPortal.cpp				Sources)
+ze_add_source(ZEPortal.h				Sources Headers)
+ze_add_source(ZEPresentationSlide.cpp	Sources)
+ze_add_source(ZEPresentationSlide.h		Sources Header ZEPP)
+ze_add_source(ZERayCaster.cpp			Sources)
+ze_add_source(ZERayCaster.h				Sources Headers)
+ze_add_source(ZEScene.cpp				Sources)
+ze_add_source(ZEScene.h					Sources Headers)
+ze_add_source(ZESceneDebugDraw.cpp		Sources)
+ze_add_source(ZESceneDebugDraw.h		Sources Headers)
+ze_add_source(ZESceneCuller.cpp			Sources)
+ze_add_source(ZESceneCuller.h			Sources Headers)
+ze_add_source(ZESkyBrush.cpp			Sources)
+ze_add_source(ZESkyBrush.h				Sources Header ZEPP)
+ze_add_source(ZETrigger.cpp				Sources)
+ze_add_source(ZETrigger.h				Sources Header ZEPP)
 
-add_library (ZEGame ${Sources})
 
-set_property(TARGET ZEGame PROPERTY FOLDER "Zinek Engine")
-
-install (TARGETS ZEGame COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEGame)
+ze_add_library(ZEGame 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	INSTALL
+	INSTALL_DESTINATION "ZEGame"
+	INSTALL_COMPONENT ZESDK)
