--- a/Source/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEGraphics/CMakeLists.txt
@@ -38,90 +38,88 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(ZEDirect3D9)
 add_subdirectory(ZEPostProcessor)
 
-add_source (ZEBitmap.cpp					Sources)
-add_source (ZEBitmap.h						Sources ZESDK)
-add_source (ZECamera.cpp					Sources)
-add_source (ZECamera.h						Sources ZESDK ZEPP)
-add_source (ZECanvas.cpp					Sources)
-add_source (ZECanvas.h 						Sources ZESDK)
-add_source (ZEDirectionalLight.cpp 			Sources)
-add_source (ZEDirectionalLight.h 			Sources ZESDK ZEPP)
-add_source (ZEFixedMaterial.cpp 			Sources)
-add_source (ZEFixedMaterial.h 				Sources ZESDK ZEPP)
-add_source (ZEFrameRenderer.cpp 			Sources)
-add_source (ZEFrameRenderer.h 				Sources ZESDK)
-add_source (ZEGraphicsDebugModule.cpp       Sources)
-add_source (ZEGraphicsDebugModule.h         Sources)
-add_source (ZEGraphicsModule.cpp 			Sources)
-add_source (ZEGraphicsModule.h 				Sources ZESDK ZEPP)
-add_source (ZEGraphicsModuleDescription.cpp Sources)
-add_source (ZEGraphicsModuleDescription.h 	Sources ZESDK ZEPP)
-add_source (ZEIndexedPolygon.h 				Sources ZESDK)
-add_source (ZELight.cpp 					Sources)
-add_source (ZELight.h 						Sources ZESDK ZEPP)
-add_source (ZEMaterial.cpp 					Sources)
-add_source (ZEMaterial.h 					Sources ZESDK ZEPP)
-add_source (ZEMaterialComponents.h 			Sources ZESDK)
-add_source (ZEMaterialFileFormat.h 			Sources)
-add_source (ZEMaterialResource.cpp 			Sources)
-add_source (ZEMaterialResource.h 			Sources ZESDK ZEPP)
-add_source (ZEOmniProjectiveLight.cpp 		Sources)
-add_source (ZEOmniProjectiveLight.h 		Sources ZESDK ZEPP)
-add_source (ZEPointLight.cpp 				Sources)
-add_source (ZEPointLight.h 					Sources ZESDK ZEPP)
-add_source (ZEProjectiveLight.cpp 			Sources)
-add_source (ZEProjectiveLight.h 			Sources ZESDK ZEPP)
-add_source (ZERenderer.cpp 					Sources)
-add_source (ZERenderer.h 					Sources ZESDK)
-add_source (ZERenderOrder.cpp 				Sources)
-add_source (ZERenderOrder.h 				Sources ZESDK)
-add_source (ZEShadowRenderer.cpp 			Sources)
-add_source (ZEShadowRenderer.h 				Sources ZESDK)
-add_source (ZESimpleMaterial.cpp 			Sources)
-add_source (ZESimpleMaterial.h 				Sources ZESDK ZEPP)
-add_source (ZESkyBoxMaterial.cpp 			Sources)
-add_source (ZESkyBoxMaterial.h 				Sources ZESDK ZEPP)
-add_source (ZETexture.cpp 					Sources)
-add_source (ZETexture.h 					Sources ZESDK)
-add_source (ZETexture2D.cpp 				Sources)
-add_source (ZETexture2D.h 					Sources ZESDK)
-add_source (ZETexture2DResource.cpp 		Sources)
-add_source (ZETexture2DResource.h 			Sources ZESDK)
-add_source (ZETexture3D.cpp 				Sources)
-add_source (ZETexture3D.h 					Sources ZESDK)
-add_source (ZETexture3DResource.cpp 		Sources)
-add_source (ZETexture3DResource.h 			Sources ZESDK)
-add_source (ZETextureCube.cpp 				Sources)
-add_source (ZETextureCube.h 				Sources ZESDK)
-add_source (ZETextureCubeResource.cpp 		Sources)
-add_source (ZETextureCubeResource.h 		Sources ZESDK)
-add_source (ZETextureResource.cpp 			Sources)
-add_source (ZETextureResource.h 			Sources ZESDK)
-add_source (ZEUIMaterial.cpp 				Sources)
-add_source (ZEUIMaterial.h 					Sources ZESDK)
-add_source (ZEVertexBuffer.cpp 				Sources)
-add_source (ZEVertexBuffer.h 				Sources ZESDK)
-add_source (ZEVertexDeclaration.cpp 		Sources)
-add_source (ZEVertexDeclaration.h 			Sources ZESDK)
-add_source (ZEVertexTypes.cpp 				Sources)
-add_source (ZEVertexTypes.h 				Sources ZESDK)
-add_source (ZEViewPort.cpp 					Sources)
-add_source (ZEViewPort.h 					Sources ZESDK)
-add_source (ZEViewVolume.cpp 				Sources)
-add_source (ZEViewVolume.h 					Sources ZESDK)
-add_source (ZETextureLoader.h						Sources)
-add_source (ZETextureLoader.cpp						Sources)				
-add_source (ZETextureTools.h						Sources)
-add_source (ZETextureTools.cpp						Sources)
-add_source (ZETextureCacheChunkIdentifier.h			Sources)
-add_source (ZETextureCacheChunkIdentifier.cpp		Sources)
+ze_add_source(ZEBitmap.cpp							Sources)
+ze_add_source(ZEBitmap.h							Sources Headers)
+ze_add_source(ZECamera.cpp							Sources)
+ze_add_source(ZECamera.h							Sources Header ZEPP)
+ze_add_source(ZECanvas.cpp							Sources)
+ze_add_source(ZECanvas.h 							Sources Headers)
+ze_add_source(ZEDirectionalLight.cpp	 			Sources)
+ze_add_source(ZEDirectionalLight.h					Sources Header ZEPP)
+ze_add_source(ZEFixedMaterial.cpp 					Sources)
+ze_add_source(ZEFixedMaterial.h 					Sources Header ZEPP)
+ze_add_source(ZEFrameRenderer.cpp 					Sources)
+ze_add_source(ZEFrameRenderer.h 					Sources Headers)
+ze_add_source(ZEGraphicsDebugModule.cpp				Sources)
+ze_add_source(ZEGraphicsDebugModule.h				Sources)
+ze_add_source(ZEGraphicsModule.cpp 					Sources)
+ze_add_source(ZEGraphicsModule.h 					Sources Header ZEPP)
+ze_add_source(ZEGraphicsModuleDescription.cpp		Sources)
+ze_add_source(ZEGraphicsModuleDescription.h			Sources Header ZEPP)
+ze_add_source(ZEIndexedPolygon.h 					Sources Headers)
+ze_add_source(ZELight.cpp 							Sources)
+ze_add_source(ZELight.h 							Sources Header ZEPP)
+ze_add_source(ZEMaterial.cpp 						Sources)
+ze_add_source(ZEMaterial.h 							Sources Header ZEPP)
+ze_add_source(ZEMaterialComponents.h				Sources Headers)
+ze_add_source(ZEMaterialFileFormat.h 				Sources)
+ze_add_source(ZEMaterialResource.cpp 				Sources)
+ze_add_source(ZEMaterialResource.h 					Sources Header ZEPP)
+ze_add_source(ZEOmniProjectiveLight.cpp 			Sources)
+ze_add_source(ZEOmniProjectiveLight.h 				Sources Header ZEPP)
+ze_add_source(ZEPointLight.cpp 						Sources)
+ze_add_source(ZEPointLight.h 						Sources Header ZEPP)
+ze_add_source(ZEProjectiveLight.cpp 				Sources)
+ze_add_source(ZEProjectiveLight.h 					Sources Header ZEPP)
+ze_add_source(ZERenderer.cpp 						Sources)
+ze_add_source(ZERenderer.h 							Sources Headers)
+ze_add_source(ZERenderOrder.cpp 					Sources)
+ze_add_source(ZERenderOrder.h 						Sources Headers)
+ze_add_source(ZEShadowRenderer.cpp 					Sources)
+ze_add_source(ZEShadowRenderer.h 					Sources Headers)
+ze_add_source(ZESimpleMaterial.cpp 					Sources)
+ze_add_source(ZESimpleMaterial.h 					Sources Header ZEPP)
+ze_add_source(ZESkyBoxMaterial.cpp 					Sources)
+ze_add_source(ZESkyBoxMaterial.h 					Sources Header ZEPP)
+ze_add_source(ZETexture.cpp 						Sources)
+ze_add_source(ZETexture.h 							Sources Headers)
+ze_add_source(ZETexture2D.cpp						Sources)
+ze_add_source(ZETexture2D.h 						Sources Headers)
+ze_add_source(ZETexture2DResource.cpp		 		Sources)
+ze_add_source(ZETexture2DResource.h					Sources Headers)
+ze_add_source(ZETexture3D.cpp 						Sources)
+ze_add_source(ZETexture3D.h 						Sources Headers)
+ze_add_source(ZETexture3DResource.cpp				Sources)
+ze_add_source(ZETexture3DResource.h					Sources Headers)
+ze_add_source(ZETextureCube.cpp 					Sources)
+ze_add_source(ZETextureCube.h 						Sources Headers)
+ze_add_source(ZETextureCubeResource.cpp				Sources)
+ze_add_source(ZETextureCubeResource.h 				Sources Headers)
+ze_add_source(ZETextureResource.cpp					Sources)
+ze_add_source(ZETextureResource.h 					Sources Headers)
+ze_add_source(ZEUIMaterial.cpp 						Sources)
+ze_add_source(ZEUIMaterial.h 						Sources Headers)
+ze_add_source(ZEVertexBuffer.cpp 					Sources)
+ze_add_source(ZEVertexBuffer.h 						Sources Headers)
+ze_add_source(ZEVertexDeclaration.cpp				Sources)
+ze_add_source(ZEVertexDeclaration.h					Sources Headers)
+ze_add_source(ZEVertexTypes.cpp 					Sources)
+ze_add_source(ZEVertexTypes.h 						Sources Headers)
+ze_add_source(ZEViewPort.cpp 						Sources)
+ze_add_source(ZEViewPort.h 							Sources Headers)
+ze_add_source(ZEViewVolume.cpp 						Sources)
+ze_add_source(ZEViewVolume.h 						Sources Headers)
+ze_add_source(ZETextureLoader.h						Sources)
+ze_add_source(ZETextureLoader.cpp					Sources)				
+ze_add_source(ZETextureTools.h						Sources)
+ze_add_source(ZETextureTools.cpp					Sources)
+ze_add_source(ZETextureCacheChunkIdentifier.h		Sources)
+ze_add_source(ZETextureCacheChunkIdentifier.cpp		Sources)
 
-
-add_library (ZEGraphics ${Sources})
-target_link_libraries (ZEGraphics ZEFile ATI_Compress_MT_VC8.lib freeimage.lib)
-
-
-set_property(TARGET ZEGraphics PROPERTY FOLDER "Zinek Engine")
-
-install (TARGETS ZEGraphics COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEGraphics)
+ze_add_library(ZEGraphics 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	LIBS ATI_Compress_MT_VC8.lib freeimage.lib
+	INSTALL
+	INSTALL_DESTINATION "ZEGraphics"
+	INSTALL_COMPONENT Header)
