--- a/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEDirect3D9/CMakeLists.txt
@@ -41,56 +41,55 @@ append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG
 
 add_subdirectory (ZED3D9PostProcessor)
 
-add_source (ZED3D9CommonTools.cpp			Sources)
-add_source (ZED3D9CommonTools.h				Sources)
-add_source (ZED3D9ComponentBase.cpp			Sources)
-add_source (ZED3D9ComponentBase.h			Sources)
-add_source (ZED3D9FixedMaterial.cpp			Sources)
-add_source (ZED3D9FixedMaterial.h			Sources)
-add_source (ZED3D9FrameRenderer.cpp			Sources)
-add_source (ZED3D9FrameRenderer.h			Sources)
-add_source (ZED3D9HDRProcessor.cpp			Sources)
-add_source (ZED3D9HDRProcessor.h			Sources ZEPP)
-add_source (ZED3D9Module.cpp				Sources)
-add_source (ZED3D9Module.h					Sources)
-add_source (ZED3D9ModuleDescription.cpp		Sources)
-add_source (ZED3D9ModuleDescription.h		Sources)
-add_source (ZED3D9Profiler.cpp				Sources)
-add_source (ZED3D9Profiler.h				Sources)
-add_source (ZED3D9Shader.cpp				Sources)
-add_source (ZED3D9Shader.h					Sources)
-add_source (ZED3D9ShaderManager.cpp			Sources)
-add_source (ZED3D9ShaderManager.h			Sources)
-add_source (ZED3D9ShadowRenderer.cpp		Sources)
-add_source (ZED3D9ShadowRenderer.h			Sources)
-add_source (ZED3D9SimpleMaterial.cpp		Sources)
-add_source (ZED3D9SimpleMaterial.h			Sources)
-add_source (ZED3D9SkyBoxMaterial.cpp		Sources)
-add_source (ZED3D9SkyBoxMaterial.h			Sources)
-add_source (ZED3D9SSAOProcessor.cpp			Sources)
-add_source (ZED3D9SSAOProcessor.h			Sources)
-add_source (ZED3D9SSAAProcessor.cpp			Sources)
-add_source (ZED3D9SSAAProcessor.h			Sources)
-add_source (ZED3D9Texture2D.cpp				Sources)
-add_source (ZED3D9Texture2D.h				Sources)
-add_source (ZED3D9Texture3D.cpp				Sources)
-add_source (ZED3D9Texture3D.h				Sources)
-add_source (ZED3D9TextureCube.cpp			Sources)
-add_source (ZED3D9TextureCube.h				Sources)
-add_source (ZED3D9TextureResizeFilters.cpp	Sources)
-add_source (ZED3D9TextureResizeFilters.h	Sources)
-add_source (ZED3D9TextureResizer.cpp		Sources)
-add_source (ZED3D9TextureResizer.h			Sources)
-add_source (ZED3D9UIMaterial.cpp			Sources)
-add_source (ZED3D9UIMaterial.h				Sources)
-add_source (ZED3D9VertexBuffer.cpp			Sources)
-add_source (ZED3D9VertexBuffer.h			Sources)
-add_source (ZED3D9VertexDeclaration.cpp		Sources)
-add_source (ZED3D9VertexDeclaration.h		Sources)
-add_source (ZED3D9ViewPort.cpp				Sources)
-add_source (ZED3D9ViewPort.h				Sources)
+ze_add_source(ZED3D9CommonTools.cpp				Sources)
+ze_add_source(ZED3D9CommonTools.h				Sources)
+ze_add_source(ZED3D9ComponentBase.cpp			Sources)
+ze_add_source(ZED3D9ComponentBase.h				Sources)
+ze_add_source(ZED3D9FixedMaterial.cpp			Sources)
+ze_add_source(ZED3D9FixedMaterial.h				Sources)
+ze_add_source(ZED3D9FrameRenderer.cpp			Sources)
+ze_add_source(ZED3D9FrameRenderer.h				Sources)
+ze_add_source(ZED3D9HDRProcessor.cpp			Sources)
+ze_add_source(ZED3D9HDRProcessor.h				Sources ZEPP)
+ze_add_source(ZED3D9Module.cpp					Sources)
+ze_add_source(ZED3D9Module.h					Sources)
+ze_add_source(ZED3D9ModuleDescription.cpp		Sources)
+ze_add_source(ZED3D9ModuleDescription.h			Sources)
+ze_add_source(ZED3D9Profiler.cpp				Sources)
+ze_add_source(ZED3D9Profiler.h					Sources)
+ze_add_source(ZED3D9Shader.cpp					Sources)
+ze_add_source(ZED3D9Shader.h					Sources)
+ze_add_source(ZED3D9ShaderManager.cpp			Sources)
+ze_add_source(ZED3D9ShaderManager.h				Sources)
+ze_add_source(ZED3D9ShadowRenderer.cpp			Sources)
+ze_add_source(ZED3D9ShadowRenderer.h			Sources)
+ze_add_source(ZED3D9SimpleMaterial.cpp			Sources)
+ze_add_source(ZED3D9SimpleMaterial.h			Sources)
+ze_add_source(ZED3D9SkyBoxMaterial.cpp			Sources)
+ze_add_source(ZED3D9SkyBoxMaterial.h			Sources)
+ze_add_source(ZED3D9SSAOProcessor.cpp			Sources)
+ze_add_source(ZED3D9SSAOProcessor.h				Sources)
+ze_add_source(ZED3D9SSAAProcessor.cpp			Sources)
+ze_add_source(ZED3D9SSAAProcessor.h				Sources)
+ze_add_source(ZED3D9Texture2D.cpp				Sources)
+ze_add_source(ZED3D9Texture2D.h					Sources)
+ze_add_source(ZED3D9Texture3D.cpp				Sources)
+ze_add_source(ZED3D9Texture3D.h					Sources)
+ze_add_source(ZED3D9TextureCube.cpp				Sources)
+ze_add_source(ZED3D9TextureCube.h				Sources)
+ze_add_source(ZED3D9TextureResizeFilters.cpp	Sources)
+ze_add_source(ZED3D9TextureResizeFilters.h		Sources)
+ze_add_source(ZED3D9TextureResizer.cpp			Sources)
+ze_add_source(ZED3D9TextureResizer.h			Sources)
+ze_add_source(ZED3D9UIMaterial.cpp				Sources)
+ze_add_source(ZED3D9UIMaterial.h				Sources)
+ze_add_source(ZED3D9VertexBuffer.cpp			Sources)
+ze_add_source(ZED3D9VertexBuffer.h				Sources)
+ze_add_source(ZED3D9VertexDeclaration.cpp		Sources)
+ze_add_source(ZED3D9VertexDeclaration.h			Sources)
+ze_add_source(ZED3D9ViewPort.cpp				Sources)
+ze_add_source(ZED3D9ViewPort.h					Sources)
 
-add_library (ZEDirect3D9 ${Sources})
-target_link_libraries (ZEDirect3D9 d3d9.lib d3dx9.lib)
-
-set_property(TARGET ZEDirect3D9 PROPERTY FOLDER "Zinek Engine")
+ze_add_library(ZEDirect3D9 
+	SOURCES ${Sources}
+	LIBS d3d9.lib d3dx9.lib)
