--- a/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
+++ b/Source/ZEGraphics/ZEPostProcessor/CMakeLists.txt
@@ -35,29 +35,32 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEPostProcessor.cpp			Sources)
-add_source (ZEPostProcessor.h			Sources ZESDK)
-add_source (ZEPostProcessorNode.cpp		Sources)
-add_source (ZEPostProcessorNode.h		Sources ZESDK)
-add_source (ZEPPBlurNode.cpp			Sources)
-add_source (ZEPPBlurNode.h				Sources ZESDK)
-add_source (ZEPPColorInputNode.cpp		Sources)
-add_source (ZEPPColorInputNode.h		Sources ZESDK)
-add_source (ZEPPDepthInputNode.cpp		Sources)
-add_source (ZEPPDepthInputNode.h		Sources ZESDK)
-add_source (ZEPPFilter1DNode.cpp		Sources)
-add_source (ZEPPFilter1DNode.h			Sources ZESDK)
-add_source (ZEPPFilter2DNode.cpp		Sources)
-add_source (ZEPPFilter2DNode.h			Sources ZESDK)
-add_source (ZEPPScreenOutputNode.cpp	Sources)
-add_source (ZEPPScreenOutputNode.h		Sources ZESDK)
-add_source (ZEPPTextureInputNode.cpp	Sources)
-add_source (ZEPPTextureInputNode.h		Sources ZESDK)
-add_source (ZEPPTextureOutputNode.cpp	Sources)
-add_source (ZEPPTextureOutputNode.h		Sources ZESDK)
-add_source (ZEPPVelocityInputNode.cpp	Sources)
-add_source (ZEPPVelocityInputNode.h		Sources ZESDK)
+ze_add_source(ZEPostProcessor.cpp			Sources)
+ze_add_source(ZEPostProcessor.h				Sources Headers)
+ze_add_source(ZEPostProcessorNode.cpp		Sources)
+ze_add_source(ZEPostProcessorNode.h			Sources Headers)
+ze_add_source(ZEPPBlurNode.cpp				Sources)
+ze_add_source(ZEPPBlurNode.h				Sources Headers)
+ze_add_source(ZEPPColorInputNode.cpp		Sources)
+ze_add_source(ZEPPColorInputNode.h			Sources Headers)
+ze_add_source(ZEPPDepthInputNode.cpp		Sources)
+ze_add_source(ZEPPDepthInputNode.h			Sources Headers)
+ze_add_source(ZEPPFilter1DNode.cpp			Sources)
+ze_add_source(ZEPPFilter1DNode.h			Sources Headers)
+ze_add_source(ZEPPFilter2DNode.cpp			Sources)
+ze_add_source(ZEPPFilter2DNode.h			Sources Headers)
+ze_add_source(ZEPPScreenOutputNode.cpp		Sources)
+ze_add_source(ZEPPScreenOutputNode.h		Sources Headers)
+ze_add_source(ZEPPTextureInputNode.cpp		Sources)
+ze_add_source(ZEPPTextureInputNode.h		Sources Headers)
+ze_add_source(ZEPPTextureOutputNode.cpp		Sources)
+ze_add_source(ZEPPTextureOutputNode.h		Sources Headers)
+ze_add_source(ZEPPVelocityInputNode.cpp		Sources)
+ze_add_source(ZEPPVelocityInputNode.h		Sources Headers)
 
-add_library (ZEPostProcessor ${Sources})
-
-set_property(TARGET ZEPostProcessor PROPERTY FOLDER "Zinek Engine")
+ze_add_library(ZEPostProcessor 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	INSTALL
+	INSTALL_DESTINATION "ZEPostProcessor"
+	INSTALL_COMPONENT ZESDK)
