--- a/Source/ZEInput/CMakeLists.txt
+++ b/Source/ZEInput/CMakeLists.txt
@@ -42,30 +42,30 @@ add_subdirectory (ZEWindowsInput)
 add_subdirectory (ZEFreespaceInput)
 add_subdirectory (ZEVRPNInput)
 
-add_source (ZEInputAction.cpp						Sources)
-add_source (ZEInputAction.h							Sources ZESDK)
-add_source (ZEInputDefinitions.cpp					Sources)
-add_source (ZEInputDefinitions.h					Sources ZESDK)
-add_source (ZEInputDevice.cpp						Sources)
-add_source (ZEInputDevice.h							Sources ZESDK)
-add_source (ZEInputDeviceExtension.cpp				Sources)
-add_source (ZEInputDeviceExtension.h				Sources ZESDK)
-add_source (ZEInputDeviceExtensionDescription.cpp	Sources)
-add_source (ZEInputDeviceExtensionDescription.h		Sources ZESDK)
-add_source (ZEInputEvent.cpp						Sources)
-add_source (ZEInputEvent.h							Sources ZESDK)
-add_source (ZEInputMap.cpp							Sources)
-add_source (ZEInputMap.h							Sources ZESDK)
-add_source (ZEInputMapBinding.cpp					Sources)
-add_source (ZEInputMapBinding.h						Sources ZESDK)
-add_source (ZEInputModule.cpp						Sources)
-add_source (ZEInputModule.h							Sources ZESDK)
-add_source (ZEInputModuleDescription.cpp			Sources)
-add_source (ZEInputModuleDescription.h				Sources ZESDK)
+ze_add_source(ZEInputAction.cpp							Sources)
+ze_add_source(ZEInputAction.h							Sources Headers)
+ze_add_source(ZEInputDefinitions.cpp					Sources)
+ze_add_source(ZEInputDefinitions.h						Sources Headers)
+ze_add_source(ZEInputDevice.cpp							Sources)
+ze_add_source(ZEInputDevice.h							Sources Headers)
+ze_add_source(ZEInputDeviceExtension.cpp				Sources)
+ze_add_source(ZEInputDeviceExtension.h					Sources Headers)
+ze_add_source(ZEInputDeviceExtensionDescription.cpp		Sources)
+ze_add_source(ZEInputDeviceExtensionDescription.h		Sources Headers)
+ze_add_source(ZEInputEvent.cpp							Sources)
+ze_add_source(ZEInputEvent.h							Sources Headers)
+ze_add_source(ZEInputMap.cpp							Sources)
+ze_add_source(ZEInputMap.h								Sources Headers)
+ze_add_source(ZEInputMapBinding.cpp						Sources)
+ze_add_source(ZEInputMapBinding.h						Sources Headers)
+ze_add_source(ZEInputModule.cpp							Sources)
+ze_add_source(ZEInputModule.h							Sources Headers)
+ze_add_source(ZEInputModuleDescription.cpp				Sources)
+ze_add_source(ZEInputModuleDescription.h				Sources Headers)
 
-add_library (ZEInput ${Sources})
-
-set_property(TARGET ZEInput PROPERTY FOLDER "Zinek Engine")
-
-install (TARGETS ZEInput COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEInput)
+ze_add_library(ZEInput 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	INSTALL
+	INSTALL_DESTINATION "ZEInput"
+	INSTALL_COMPONENT ZESDK)
