--- a/Source/ZEModel/CMakeLists.txt
+++ b/Source/ZEModel/CMakeLists.txt
@@ -35,32 +35,32 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEModel.cpp					Sources)
-add_source (ZEModel.h					Sources ZESDK ZEPP)
-add_source (ZEModelAnimation.cpp		Sources)
-add_source (ZEModelAnimation.h			Sources ZESDK)
-add_source (ZEModelAnimationTrack.cpp	Sources)
-add_source (ZEModelAnimationTrack.h		Sources ZESDK)
-add_source (ZEModelBone.cpp				Sources)
-add_source (ZEModelBone.h				Sources ZESDK)
-add_source (ZEModelDebugModule.cpp      Sources)
-add_source (ZEModelDebugModule.h        Sources)
-add_source (ZEModelFileFormat.cpp		Sources)
-add_source (ZEModelFileFormat.h			Sources)
-add_source (ZEModelIKChain.cpp			Sources)
-add_source (ZEModelIKChain.h			Sources ZESDK)
-add_source (ZEModelIKChainNode.cpp		Sources)
-add_source (ZEModelIKChainNode.h		Sources ZESDK)
-add_source (ZEModelMesh.cpp				Sources)
-add_source (ZEModelMesh.h				Sources ZESDK)
-add_source (ZEModelMeshLOD.cpp			Sources)
-add_source (ZEModelMeshLOD.h			Sources ZESDK)
-add_source (ZEModelResource.cpp			Sources)
-add_source (ZEModelResource.h			Sources ZESDK)
+ze_add_source(ZEModel.cpp					Sources)
+ze_add_source(ZEModel.h						Sources Headers ZEPP)
+ze_add_source(ZEModelAnimation.cpp			Sources)
+ze_add_source(ZEModelAnimation.h			Sources Headers)
+ze_add_source(ZEModelAnimationTrack.cpp		Sources)
+ze_add_source(ZEModelAnimationTrack.h		Sources Headers)
+ze_add_source(ZEModelBone.cpp				Sources)
+ze_add_source(ZEModelBone.h					Sources Headers)
+ze_add_source(ZEModelDebugModule.cpp		Sources)
+ze_add_source(ZEModelDebugModule.h			Sources)
+ze_add_source(ZEModelFileFormat.cpp			Sources)
+ze_add_source(ZEModelFileFormat.h			Sources)
+ze_add_source(ZEModelIKChain.cpp			Sources)
+ze_add_source(ZEModelIKChain.h				Sources Headers)
+ze_add_source(ZEModelIKChainNode.cpp		Sources)
+ze_add_source(ZEModelIKChainNode.h			Sources Headers)
+ze_add_source(ZEModelMesh.cpp				Sources)
+ze_add_source(ZEModelMesh.h					Sources Headers)
+ze_add_source(ZEModelMeshLOD.cpp			Sources)
+ze_add_source(ZEModelMeshLOD.h				Sources Headers)
+ze_add_source(ZEModelResource.cpp			Sources)
+ze_add_source(ZEModelResource.h				Sources Headers)
 
-add_library (ZEModel ${Sources})
-
-set_property(TARGET ZEModel PROPERTY FOLDER "Zinek Engine")
-
-install (TARGETS ZEModel COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEModel)
+ze_add_library(ZEModel 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	INSTALL
+	INSTALL_DESTINATION "ZEModel"
+	INSTALL_COMPONENT ZESDK)
