--- a/Source/ZEPhysics/CMakeLists.txt
+++ b/Source/ZEPhysics/CMakeLists.txt
@@ -37,34 +37,34 @@ cmake_minimum_required (VERSION 2.8)
 
 add_subdirectory (ZEPhysX)
 
-add_source (ZEPhysicalCallbacks.cpp			Sources)
-add_source (ZEPhysicalCallbacks.h			Sources ZESDK)
-add_source (ZEPhysicalJoint.cpp				Sources)
-add_source (ZEPhysicalJoint.h				Sources ZESDK)
-add_source (ZEPhysicalMaterial.cpp			Sources)
-add_source (ZEPhysicalMaterial.h			Sources ZESDK)
-add_source (ZEPhysicalMesh.cpp				Sources)
-add_source (ZEPhysicalMesh.h				Sources ZESDK)
-add_source (ZEPhysicalObject.cpp			Sources)
-add_source (ZEPhysicalObject.h				Sources ZESDK)
-add_source (ZEPhysicalRigidBody.cpp			Sources)
-add_source (ZEPhysicalRigidBody.h			Sources ZESDK)
-add_source (ZEPhysicalShapes.cpp			Sources)
-add_source (ZEPhysicalShapes.h				Sources ZESDK)
-add_source (ZEPhysicalTrigger.cpp			Sources)
-add_source (ZEPhysicalTrigger.h				Sources ZESDK)
-add_source (ZEPhysicalWorld.cpp				Sources)
-add_source (ZEPhysicalWorld.h				Sources ZESDK)
-add_source (ZEPhysicsModule.cpp				Sources)
-add_source (ZEPhysicsModule.h				Sources ZESDK)
-add_source (ZEPhysicsModuleDescription.cpp	Sources)
-add_source (ZEPhysicsModuleDescription.h	Sources ZESDK)
-add_source (ZEPhysicsDebugModule.cpp	    Sources)
-add_source (ZEPhysicsDebugModule.h	        Sources)
+ze_add_source(ZEPhysicalCallbacks.cpp			Sources)
+ze_add_source(ZEPhysicalCallbacks.h				Sources Headers)
+ze_add_source(ZEPhysicalJoint.cpp				Sources)
+ze_add_source(ZEPhysicalJoint.h					Sources Headers)
+ze_add_source(ZEPhysicalMaterial.cpp			Sources)
+ze_add_source(ZEPhysicalMaterial.h				Sources Headers)
+ze_add_source(ZEPhysicalMesh.cpp				Sources)
+ze_add_source(ZEPhysicalMesh.h					Sources Headers)
+ze_add_source(ZEPhysicalObject.cpp				Sources)
+ze_add_source(ZEPhysicalObject.h				Sources Headers)
+ze_add_source(ZEPhysicalRigidBody.cpp			Sources)
+ze_add_source(ZEPhysicalRigidBody.h				Sources Headers)
+ze_add_source(ZEPhysicalShapes.cpp				Sources)
+ze_add_source(ZEPhysicalShapes.h				Sources Headers)
+ze_add_source(ZEPhysicalTrigger.cpp				Sources)
+ze_add_source(ZEPhysicalTrigger.h				Sources Headers)
+ze_add_source(ZEPhysicalWorld.cpp				Sources)
+ze_add_source(ZEPhysicalWorld.h					Sources Headers)
+ze_add_source(ZEPhysicsModule.cpp				Sources)
+ze_add_source(ZEPhysicsModule.h					Sources Headers)
+ze_add_source(ZEPhysicsModuleDescription.cpp	Sources)
+ze_add_source(ZEPhysicsModuleDescription.h		Sources Headers)
+ze_add_source(ZEPhysicsDebugModule.cpp			Sources)
+ze_add_source(ZEPhysicsDebugModule.h	        Sources)
 
-add_library (ZEPhysics ${Sources})
-
-install (TARGETS ZEPhysics COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEPhysics)
-
-set_property(TARGET ZEPhysics PROPERTY FOLDER "Zinek Engine")
+ze_add_library(ZEPhysics 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	INSTALL
+	INSTALL_DESTINATION "ZEPhysics"
+	INSTALL_COMPONENT ZESDK)
