--- a/Source/ZEPhysics/ZEPhysX/CMakeLists.txt
+++ b/Source/ZEPhysics/ZEPhysX/CMakeLists.txt
@@ -35,28 +35,28 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEPhysXCollisionManager.cpp			Sources)
-add_source (ZEPhysXCollisionManager.h			Sources)
-add_source (ZEPhysXComponentBase.cpp			Sources)
-add_source (ZEPhysXComponentBase.h				Sources)
-add_source (ZEPhysXConversion.cpp				Sources)
-add_source (ZEPhysXConversion.h					Sources)
-add_source (ZEPhysXModule.cpp					Sources)
-add_source (ZEPhysXModule.h						Sources)
-add_source (ZEPhysXModuleDescription.cpp		Sources)
-add_source (ZEPhysXModuleDescription.h			Sources)
-add_source (ZEPhysXPhysicalJoint.cpp			Sources)
-add_source (ZEPhysXPhysicalJoint.h				Sources)
-add_source (ZEPhysXPhysicalMesh.cpp				Sources)
-add_source (ZEPhysXPhysicalMesh.h				Sources)
-add_source (ZEPhysXPhysicalRigidBody.cpp		Sources)
-add_source (ZEPhysXPhysicalRigidBody.h			Sources)
-add_source (ZEPhysXPhysicalWorld.cpp			Sources)
-add_source (ZEPhysXPhysicalWorld.h				Sources)
-add_source (ZEPhysXStream.cpp					Sources)
-add_source (ZEPhysXStream.h						Sources)
-add_source (ZEPhysXUserOutputStream.cpp			Sources)
-add_source (ZEPhysXUserOutputStream.h			Sources)
+ze_add_source(ZEPhysXCollisionManager.cpp		Sources)
+ze_add_source(ZEPhysXCollisionManager.h			Sources)
+ze_add_source(ZEPhysXComponentBase.cpp			Sources)
+ze_add_source(ZEPhysXComponentBase.h			Sources)
+ze_add_source(ZEPhysXConversion.cpp				Sources)
+ze_add_source(ZEPhysXConversion.h				Sources)
+ze_add_source(ZEPhysXModule.cpp					Sources)
+ze_add_source(ZEPhysXModule.h					Sources)
+ze_add_source(ZEPhysXModuleDescription.cpp		Sources)
+ze_add_source(ZEPhysXModuleDescription.h		Sources)
+ze_add_source(ZEPhysXPhysicalJoint.cpp			Sources)
+ze_add_source(ZEPhysXPhysicalJoint.h			Sources)
+ze_add_source(ZEPhysXPhysicalMesh.cpp			Sources)
+ze_add_source(ZEPhysXPhysicalMesh.h				Sources)
+ze_add_source(ZEPhysXPhysicalRigidBody.cpp		Sources)
+ze_add_source(ZEPhysXPhysicalRigidBody.h		Sources)
+ze_add_source(ZEPhysXPhysicalWorld.cpp			Sources)
+ze_add_source(ZEPhysXPhysicalWorld.h			Sources)
+ze_add_source(ZEPhysXStream.cpp					Sources)
+ze_add_source(ZEPhysXStream.h					Sources)
+ze_add_source(ZEPhysXUserOutputStream.cpp		Sources)
+ze_add_source(ZEPhysXUserOutputStream.h			Sources)
 
 #add_definitions (-DNX_USER_DEBUG_MODE)
 
@@ -67,7 +67,6 @@ include_directories (${PROJECT_SOURCE_DIR}
 	${PROJECT_SOURCE_DIR}/../Include/physx/PhysXLoader
 	${PROJECT_SOURCE_DIR}/../Include/physx/Physics)
 
-add_library (ZEPhysX ${Sources})
-target_link_libraries (ZEPhysX PhysXLoader.lib NxCooking.lib)
-
-set_property(TARGET ZEPhysX PROPERTY FOLDER "Zinek Engine")
+ze_add_library(ZEPhysX 
+	SOURCES ${Sources}
+	LIBS PhysXLoader.lib NxCooking.lib)
