--- a/Source/ZESound/CMakeLists.txt
+++ b/Source/ZESound/CMakeLists.txt
@@ -38,32 +38,32 @@ cmake_minimum_required (VERSION 2.8)
 add_subdirectory (ZEDirectSound)
 add_subdirectory (ZEOpenAL)
 
-add_source (ZEListener.cpp				Sources)
-add_source (ZEListener.h				Sources ZESDK ZEPP)
-add_source (ZESoundFX.h					Sources ZESDK)
-add_source (ZESoundModule.cpp			Sources)
-add_source (ZESoundModule.h				Sources ZESDK)
-add_source (ZESoundModuleDescription.cpp Sources)
-add_source (ZESoundModuleDescription.h	 Sources ZESDK)
-add_source (ZESoundDebugModule.cpp		Sources)
-add_source (ZESoundDebugModule.h		Sources)
-add_source (ZESoundResource.cpp			Sources)
-add_source (ZESoundResource.h			Sources ZESDK ZEPP)
-add_source (ZESoundResourceMP3.cpp		Sources)
-add_source (ZESoundResourceMP3.h		Sources)
-add_source (ZESoundResourceOGG.cpp		Sources)
-add_source (ZESoundResourceOGG.h		Sources)
-add_source (ZESoundResourceWAV.cpp		Sources)
-add_source (ZESoundResourceWAV.h		Sources)
-add_source (ZESoundSource.cpp			Sources)
-add_source (ZESoundSource.h				Sources ZESDK ZEPP)
-add_source (ZESoundSource3D.cpp			Sources)
-add_source (ZESoundSource3D.h			Sources ZESDK ZEPP)
+ze_add_source(ZEListener.cpp				Sources)
+ze_add_source(ZEListener.h					Sources Headers ZEPP)
+ze_add_source(ZESoundFX.h					Sources Headers)
+ze_add_source(ZESoundModule.cpp				Sources)
+ze_add_source(ZESoundModule.h				Sources Headers)
+ze_add_source(ZESoundModuleDescription.cpp	Sources)
+ze_add_source(ZESoundModuleDescription.h	Sources Headers)
+ze_add_source(ZESoundDebugModule.cpp		Sources)
+ze_add_source(ZESoundDebugModule.h			Sources)
+ze_add_source(ZESoundResource.cpp			Sources)
+ze_add_source(ZESoundResource.h				Sources Headers ZEPP)
+ze_add_source(ZESoundResourceMP3.cpp		Sources)
+ze_add_source(ZESoundResourceMP3.h			Sources)
+ze_add_source(ZESoundResourceOGG.cpp		Sources)
+ze_add_source(ZESoundResourceOGG.h			Sources)
+ze_add_source(ZESoundResourceWAV.cpp		Sources)
+ze_add_source(ZESoundResourceWAV.h			Sources)
+ze_add_source(ZESoundSource.cpp				Sources)
+ze_add_source(ZESoundSource.h				Sources Headers ZEPP)
+ze_add_source(ZESoundSource3D.cpp			Sources)
+ze_add_source(ZESoundSource3D.h				Sources Headers ZEPP)
 
-add_library (ZESound ${Sources})
-target_link_libraries (ZESound libvorbis.lib libvorbisfile.lib libogg.lib libmpg123.lib)
-
-set_property(TARGET ZESound PROPERTY FOLDER "Zinek Engine")
-
-install (TARGETS ZESound COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZESound)
+ze_add_library(ZESound 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	LIBS libmpg123.lib libogg.lib libvorbis.lib libvorbisfile.lib
+	INSTALL
+	INSTALL_DESTINATION "ZESound"
+	INSTALL_COMPONENT ZESDK)
