--- a/Source/ZEUI/CMakeLists.txt
+++ b/Source/ZEUI/CMakeLists.txt
@@ -35,52 +35,52 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEFontFile.cpp						Sources)
-add_source (ZEFontFile.h						Sources ZESDK)
-add_source (ZEFontResource.cpp					Sources)
-add_source (ZEFontResource.h					Sources ZESDK)
-add_source (ZEIUCheckBoxControl.cpp				Sources)
-add_source (ZEIUCheckBoxControl.h				Sources ZESDK)
-add_source (ZEUIBorderedFrameControl.cpp		Sources)
-add_source (ZEUIBorderedFrameControl.h			Sources ZESDK)
-add_source (ZEUIButtonControl.cpp				Sources)
-add_source (ZEUIButtonControl.h					Sources ZESDK)
-add_source (ZEUIControl.cpp						Sources)
-add_source (ZEUIControl.h						Sources ZESDK)
-add_source (ZEUICursorControl.cpp				Sources)
-add_source (ZEUICursorControl.h					Sources ZESDK)
-add_source (ZEUIDebugModule.cpp					Sources)
-add_source (ZEUIDebugModule.h					Sources ZESDK)
-add_source (ZEUIEvents.cpp						Sources)
-add_source (ZEUIEvents.h						Sources ZESDK)
-add_source (ZEUIFrameControl.cpp				Sources)
-add_source (ZEUIFrameControl.h					Sources ZESDK)
-add_source (ZEUIHorizontalSliderControl.cpp		Sources)
-add_source (ZEUIHorizontalSliderControl.h		Sources ZESDK)
-add_source (ZEUIManager.cpp						Sources)
-add_source (ZEUIManager.h						Sources ZESDK)
-add_source (ZEUIMultiLineTextEdit.cpp			Sources)
-add_source (ZEUIMultiLineTextEdit.h				Sources ZESDK)
-add_source (ZEUIRadioButtonControl.cpp			Sources)
-add_source (ZEUIRadioButtonControl.h			Sources ZESDK)
-add_source (ZEUIRectangle.cpp					Sources)
-add_source (ZEUIRectangle.h						Sources ZESDK)
-add_source (ZEUIRenderer.cpp					Sources)
-add_source (ZEUIRenderer.h						Sources ZESDK)
-add_source (ZEUISliderControl.cpp				Sources)
-add_source (ZEUISliderControl.h					Sources ZESDK)
-add_source (ZEUITextControl.cpp					Sources)
-add_source (ZEUITextControl.h					Sources ZESDK)
-add_source (ZEUIVerticalSliderControl.cpp		Sources)
-add_source (ZEUIVerticalSliderControl.h			Sources ZESDK)
-add_source (ZEUIWindowControl.cpp				Sources)
-add_source (ZEUIWindowControl.h					Sources ZESDK)
-add_source (ZEUTextEditControl.cpp				Sources)
-add_source (ZEUTextEditControl.h				Sources ZESDK)
+ze_add_source(ZEFontFile.cpp					Sources)
+ze_add_source(ZEFontFile.h						Sources Headers)
+ze_add_source(ZEFontResource.cpp				Sources)
+ze_add_source(ZEFontResource.h					Sources Headers)
+ze_add_source(ZEIUCheckBoxControl.cpp			Sources)
+ze_add_source(ZEIUCheckBoxControl.h				Sources Headers)
+ze_add_source(ZEUIBorderedFrameControl.cpp		Sources)
+ze_add_source(ZEUIBorderedFrameControl.h		Sources Headers)
+ze_add_source(ZEUIButtonControl.cpp				Sources)
+ze_add_source(ZEUIButtonControl.h				Sources Headers)
+ze_add_source(ZEUIControl.cpp					Sources)
+ze_add_source(ZEUIControl.h						Sources Headers)
+ze_add_source(ZEUICursorControl.cpp				Sources)
+ze_add_source(ZEUICursorControl.h				Sources Headers)
+ze_add_source(ZEUIDebugModule.cpp				Sources)
+ze_add_source(ZEUIDebugModule.h					Sources Headers)
+ze_add_source(ZEUIEvents.cpp					Sources)
+ze_add_source(ZEUIEvents.h						Sources Headers)
+ze_add_source(ZEUIFrameControl.cpp				Sources)
+ze_add_source(ZEUIFrameControl.h				Sources Headers)
+ze_add_source(ZEUIHorizontalSliderControl.cpp	Sources)
+ze_add_source(ZEUIHorizontalSliderControl.h		Sources Headers)
+ze_add_source(ZEUIManager.cpp					Sources)
+ze_add_source(ZEUIManager.h						Sources Headers)
+ze_add_source(ZEUIMultiLineTextEdit.cpp			Sources)
+ze_add_source(ZEUIMultiLineTextEdit.h			Sources Headers)
+ze_add_source(ZEUIRadioButtonControl.cpp		Sources)
+ze_add_source(ZEUIRadioButtonControl.h			Sources Headers)
+ze_add_source(ZEUIRectangle.cpp					Sources)
+ze_add_source(ZEUIRectangle.h					Sources Headers)
+ze_add_source(ZEUIRenderer.cpp					Sources)
+ze_add_source(ZEUIRenderer.h					Sources Headers)
+ze_add_source(ZEUISliderControl.cpp				Sources)
+ze_add_source(ZEUISliderControl.h				Sources Headers)
+ze_add_source(ZEUITextControl.cpp				Sources)
+ze_add_source(ZEUITextControl.h					Sources Headers)
+ze_add_source(ZEUIVerticalSliderControl.cpp		Sources)
+ze_add_source(ZEUIVerticalSliderControl.h		Sources Headers)
+ze_add_source(ZEUIWindowControl.cpp				Sources)
+ze_add_source(ZEUIWindowControl.h				Sources Headers)
+ze_add_source(ZEUTextEditControl.cpp			Sources)
+ze_add_source(ZEUTextEditControl.h				Sources Headers)
 
-add_library (ZEUI ${Sources})
-
-set_property(TARGET ZEUI PROPERTY FOLDER "Zinek Engine")
-
-install (TARGETS ZEUI COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEUI)
+ze_add_library(ZEUI 
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	INSTALL
+	INSTALL_DESTINATION "ZEUI"
+	INSTALL_COMPONENT ZESDK)
