--- a/ZEditor/ZEDSceneEditor/CMakeLists.txt
+++ b/ZEditor/ZEDSceneEditor/CMakeLists.txt
@@ -37,25 +37,25 @@ cmake_minimum_required (VERSION 2.8)
 
 include(${QT_USE_FILE})
 
-add_source (ZEDEntitySelectionItem.cpp			Sources)
-add_source (ZEDEntitySelectionItem.h			Sources)
-add_source (ZEDEntitySelector.cpp				Sources)
-add_source (ZEDEntitySelector.h					Sources QtMocs)
-add_source (ZEDSceneEditor.cpp					Sources)
-add_source (ZEDSceneEditor.ui					Sources QtUI)
-add_source (ZEDSceneEditor.h					Sources QtMocs)
-add_source (ZEDSceneList.cpp					Sources)
-add_source (ZEDSceneList.h						Sources)
-add_source (ZEDSelectionItem.cpp				Sources)
-add_source (ZEDSelectionItem.h					Sources)
-add_source (ZEDSelectionItemPlugin.cpp			Sources)
-add_source (ZEDSelectionItemPlugin.h			Sources)
+ze_add_source(ZEDEntitySelectionItem.cpp		Sources)
+ze_add_source(ZEDEntitySelectionItem.h			Sources)
+ze_add_source(ZEDEntitySelector.cpp				Sources)
+ze_add_source(ZEDEntitySelector.h				Sources QtMocs)
+ze_add_source(ZEDSceneEditor.cpp				Sources)
+ze_add_source(ZEDSceneEditor.ui					Sources QtUI)
+ze_add_source(ZEDSceneEditor.h					Sources QtMocs)
+ze_add_source(ZEDSceneList.cpp					Sources)
+ze_add_source(ZEDSceneList.h					Sources)
+ze_add_source(ZEDSelectionItem.cpp				Sources)
+ze_add_source(ZEDSelectionItem.h				Sources)
+ze_add_source(ZEDSelectionItemPlugin.cpp		Sources)
+ze_add_source(ZEDSelectionItemPlugin.h			Sources)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
 qt4_wrap_cpp (QtMocFiles  ${QtMocs})
-add_library (ZEDSceneEditor ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles})
 
-set_property(TARGET ZEDSceneEditor PROPERTY FOLDER "ZEditor")
+ze_add_library(ZEDSceneEditor 
+	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles})
