--- a/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/ZEFoundation/ZEMath/CMakeLists.txt
@@ -35,42 +35,60 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-add_source (ZEAABBox.cpp			Sources)
-add_source (ZEAABBox.h				Sources ZESDK)
-add_source (ZEBSphere.cpp			Sources)
-add_source (ZEBSphere.h				Sources ZESDK)
-add_source (ZEMathDefinitions.cpp	Sources)
-add_source (ZEMathDefinitions.h		Sources ZESDK)
-add_source (ZELine.cpp				Sources)
-add_source (ZELine.h				Sources ZESDK)
-add_source (ZELineSegment.cpp		Sources)
-add_source (ZELineSegment.h			Sources ZESDK)
-add_source (ZEMatrix.cpp			Sources)
-add_source (ZEMatrix.h				Sources ZESDK)
-add_source (ZEOBBox.cpp				Sources)
-add_source (ZEOBBox.h				Sources ZESDK)
-add_source (ZEPlane.cpp				Sources)
-add_source (ZEPlane.h				Sources ZESDK)
-add_source (ZEQuaternion.cpp		Sources)
-add_source (ZEQuaternion.h			Sources ZESDK)
-add_source (ZERay.cpp				Sources)
-add_source (ZERay.h					Sources ZESDK)
-add_source (ZERectangle.cpp			Sources)
-add_source (ZERectangle.h			Sources ZESDK)
-add_source (ZERectangle3D.cpp		Sources)
-add_source (ZERectangle3D.h			Sources ZESDK)
-add_source (ZETriangle.cpp			Sources)
-add_source (ZETriangle.h			Sources ZESDK)
-add_source (ZETrigonometry.cpp		Sources)
-add_source (ZETrigonometry.h		Sources ZESDK)
-add_source (ZEVector.cpp			Sources)
-add_source (ZEVector.h				Sources ZESDK)
+ze_add_source(ZEAABBox.cpp				Sources)
+ze_add_source(ZEAABBox.h				Sources Headers)
+ze_add_source(ZEAABBoxTests.cpp			Tests)
+ze_add_source(ZEBSphere.cpp				Sources)
+ze_add_source(ZEBSphere.h				Sources Headers)
+ze_add_source(ZEBSphereTests.cpp		Tests)
+ze_add_source(ZEMathDefinitions.cpp		Sources)
+ze_add_source(ZEMathDefinitions.h		Sources Headers)
+ze_add_source(ZELine.cpp				Sources)
+ze_add_source(ZELine.h					Sources Headers)
+ze_add_source(ZELineTests.cpp			Tests)
+ze_add_source(ZELineSegment.cpp			Sources)
+ze_add_source(ZELineSegment.h			Sources Headers)
+ze_add_source(ZELineSegmentTests.cpp	Tests)
+ze_add_source(ZEMatrix.cpp				Sources)
+ze_add_source(ZEMatrixTests.cpp			Tests)
+ze_add_source(ZEMatrix.h				Sources Headers)
+ze_add_source(ZEOBBox.cpp				Sources)
+ze_add_source(ZEOBBox.h					Sources Headers)
+ze_add_source(ZEOBBoxTests.cpp			Tests)
+ze_add_source(ZEPlane.cpp				Sources)
+ze_add_source(ZEPlane.h					Sources Headers)
+ze_add_source(ZEPlaneTests.cpp			Tests)
+ze_add_source(ZEQuaternion.cpp			Sources)
+ze_add_source(ZEQuaternion.h			Sources Headers)
+ze_add_source(ZEQuaternionTests.cpp		Tests)
+ze_add_source(ZERay.cpp					Sources)
+ze_add_source(ZERay.h					Sources Headers)
+ze_add_source(ZERayTests.cpp			Tests)
+ze_add_source(ZERectangle.cpp			Sources)
+ze_add_source(ZERectangle.h				Sources Headers)
+ze_add_source(ZERectangleTests.cpp		Tests)
+ze_add_source(ZERectangle3D.cpp			Sources)
+ze_add_source(ZERectangle3D.h			Sources Headers)
+ze_add_source(ZERectangle3DTests.cpp	Tests)
+ze_add_source(ZETriangle.cpp			Sources)
+ze_add_source(ZETriangle.h				Sources Headers)
+ze_add_source(ZETriangleTests.cpp		Tests)
+ze_add_source(ZETrigonometry.cpp		Sources)
+ze_add_source(ZETrigonometry.h			Sources Headers)
+ze_add_source(ZETrigonometryTests.cpp	Tests)
+ze_add_source(ZEVector.cpp				Sources)
+ze_add_source(ZEVector.h				Sources Headers)
+ze_add_source(ZEVectorTests.cpp			Tests)
 
-add_library (ZEMath ${Sources})
-
-target_link_libraries(ZEMath ZEFoundation)
-
-set_property(TARGET ZEMath PROPERTY FOLDER "ZEFoundation")
-
-install (TARGETS ZEMath COMPONENT "Libraries" CONFIGURATIONS Release DESTINATION Lib)
-install (FILES ${ZESDK}  COMPONENT "Includes" CONFIGURATIONS Release DESTINATION Include/ZEMath)
+ze_add_library(ZEMath 
+	SOURCES ${Sources} 
+	HEADERS ${Headers}
+	LIBS ZEFoundation 
+	INSTALL
+	INSTALL_DESTINATION ZEFoundation/ZEMath
+	INSTALL_COMPONENT SDK)
+	
+ze_add_bulk_unit_tests(
+	SOURCES ${Tests}
+	EXTRA_SOURCES ZEMathIOStreamMapping.cpp ZEMathIOStreamMapping.h
+	TEST_TARGET ZEMath)
