--- a/ZEditor/ZEDCommonControls/ZEDPropertyWindowManager/CMakeLists.txt
+++ b/ZEditor/ZEDCommonControls/ZEDPropertyWindowManager/CMakeLists.txt
@@ -35,49 +35,44 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-include(${QT_USE_FILE})
-
-add_source (ZEDBoolComboBox.cpp				Sources)
-add_source (ZEDBoolComboBox.h				Sources QtMocs)
-add_source (ZEDColorLabel.cpp				Sources)
-add_source (ZEDColorLabel.h					Sources)
-add_source (ZEDColorPickerRGB.cpp			Sources)
-add_source (ZEDColorPickerRGB.h				Sources QtMocs)
-add_source (ZEDColorPickerRGBA.cpp			Sources)
-add_source (ZEDColorPickerRGBA.h			Sources QtMocs)
-add_source (ZEDEnumComboBox.cpp				Sources)
-add_source (ZEDEnumComboBox.h				Sources QtMocs)
-add_source (ZEDFileBrowser.cpp				Sources)
-add_source (ZEDFileBrowser.h				Sources QtMocs)
-add_source (ZEDFloatIntLineEdit.cpp			Sources)
-add_source (ZEDFloatIntLineEdit.h			Sources QtMocs)
-add_source (ZEDLineEdit.cpp					Sources)
-add_source (ZEDLineEdit.h					Sources QtMocs)
-add_source (ZEDPropertyUndoRedo.cpp			Sources)
-add_source (ZEDPropertyUndoRedo.h			Sources)
-add_source (ZEDPropertyWidget.cpp			Sources)
-add_source (ZEDPropertyWidget.h				Sources)
-add_source (ZEDPropertyWindowManager.cpp	Sources)
-add_source (ZEDPropertyWindowManager.h		Sources QtMocs)
-add_source (ZEDRotationSpinBox3.cpp			Sources)
-add_source (ZEDRotationSpinBox3.h			Sources QtMocs)
-add_source (ZEDSpinBox1Float.cpp			Sources)
-add_source (ZEDSpinBox1Float.h				Sources QtMocs)
-add_source (ZEDSpinBox1Integer.cpp			Sources)
-add_source (ZEDSpinBox1Integer.h			Sources QtMocs)
-add_source (ZEDSpinBox2.cpp					Sources)
-add_source (ZEDSpinBox2.h					Sources QtMocs)
-add_source (ZEDSpinBox3.cpp					Sources)
-add_source (ZEDSpinBox3.h					Sources QtMocs)
-add_source (ZEDSpinBox4.cpp					Sources)
-add_source (ZEDSpinBox4.h					Sources QtMocs)
-
-include_directories (${CMAKE_CURRENT_BINARY_DIR})
+ze_add_source(ZEDBoolComboBox.cpp			Sources)
+ze_add_source(ZEDBoolComboBox.h				Sources QtMocs)
+ze_add_source(ZEDColorLabel.cpp				Sources)
+ze_add_source(ZEDColorLabel.h				Sources)
+ze_add_source(ZEDColorPickerRGB.cpp			Sources)
+ze_add_source(ZEDColorPickerRGB.h			Sources QtMocs)
+ze_add_source(ZEDColorPickerRGBA.cpp		Sources)
+ze_add_source(ZEDColorPickerRGBA.h			Sources QtMocs)
+ze_add_source(ZEDEnumComboBox.cpp			Sources)
+ze_add_source(ZEDEnumComboBox.h				Sources QtMocs)
+ze_add_source(ZEDFileBrowser.cpp			Sources)
+ze_add_source(ZEDFileBrowser.h				Sources QtMocs)
+ze_add_source(ZEDFloatIntLineEdit.cpp		Sources)
+ze_add_source(ZEDFloatIntLineEdit.h			Sources QtMocs)
+ze_add_source(ZEDLineEdit.cpp				Sources)
+ze_add_source(ZEDLineEdit.h					Sources QtMocs)
+ze_add_source(ZEDPropertyUndoRedo.cpp		Sources)
+ze_add_source(ZEDPropertyUndoRedo.h			Sources)
+ze_add_source(ZEDPropertyWidget.cpp			Sources)
+ze_add_source(ZEDPropertyWidget.h			Sources)
+ze_add_source(ZEDPropertyWindowManager.cpp	Sources)
+ze_add_source(ZEDPropertyWindowManager.h	Sources QtMocs)
+ze_add_source(ZEDRotationSpinBox3.cpp		Sources)
+ze_add_source(ZEDRotationSpinBox3.h			Sources QtMocs)
+ze_add_source(ZEDSpinBox1Float.cpp			Sources)
+ze_add_source(ZEDSpinBox1Float.h			Sources QtMocs)
+ze_add_source(ZEDSpinBox1Integer.cpp		Sources)
+ze_add_source(ZEDSpinBox1Integer.h			Sources QtMocs)
+ze_add_source(ZEDSpinBox2.cpp				Sources)
+ze_add_source(ZEDSpinBox2.h					Sources QtMocs)
+ze_add_source(ZEDSpinBox3.cpp				Sources)
+ze_add_source(ZEDSpinBox3.h					Sources QtMocs)
+ze_add_source(ZEDSpinBox4.cpp				Sources)
+ze_add_source(ZEDSpinBox4.h					Sources QtMocs)
 
 qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
 qt4_wrap_cpp (QtMocFiles  ${QtMocs})
 
-add_library (ZEDPropertyWindowManager ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles})
-
-set_property(TARGET ZEDPropertyWindowManager PROPERTY FOLDER "ZEditor")
+ze_add_library(ZEDPropertyWindowManager 
+	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles})
