--- a/ZEditor/ZEDCore/CMakeLists.txt
+++ b/ZEditor/ZEDCore/CMakeLists.txt
@@ -35,30 +35,16 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-include(${QT_USE_FILE})
+ze_add_source(ZEDPlugIn.cpp			Sources)
+ze_add_source(ZEDPlugIn.h			Sources)
+ze_add_source(ZEDExtension.cpp		Sources)
+ze_add_source(ZEDExtension.h		Sources)
+ze_add_source(ZEDFileExtension.cpp	Sources)
+ze_add_source(ZEDFileExtension.h	Sources)
+ze_add_source(ZEDPreviewWidget.cpp	Sources)
+ze_add_source(ZEDPreviewWidget.h	Sources)
+ze_add_source(ZEDPlugInManager.cpp	Sources)
+ze_add_source(ZEDPlugInManager.h	Sources)
 
-add_source (ZEDPlugIn.cpp		              Sources)
-add_source (ZEDPlugIn.h			              Sources)
-
-add_source (ZEDExtension.cpp		          Sources)
-add_source (ZEDExtension.h			          Sources)
-
-add_source (ZEDFileExtension.cpp		      Sources)
-add_source (ZEDFileExtension.h			      Sources)
-
-add_source (ZEDPreviewWidget.cpp		      Sources)
-add_source (ZEDPreviewWidget.h			      Sources)
-
-add_source (ZEDPlugInManager.cpp		      Sources)
-add_source (ZEDPlugInManager.h			      Sources)
-
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
-qt4_add_resources (QtResourceFiles ${QtResources})
-qt4_wrap_ui (QtUIFiles ${QtUI})
-qt4_wrap_cpp (QtMocFiles  ${QtMocs})
-
-add_library (ZEDCore ${Sources} ${QtUIFiles} ${QtMocFiles} ${QtResourceFiles})
-
-set_property(TARGET ZEDCore PROPERTY FOLDER "ZEditor")
+ze_add_library(ZEDCore 
+	SOURCES ${Sources})
